adjust right padding to prevent maze overflow on narrow screens

--- a/main.css
+++ b/main.css
@@ -33,6 +33,7 @@ body {
   font-family: 'Roboto', sans-serif;
   padding-bottom: 200px;
   padding-left: 10px;
+  padding-right: 20px;
   padding-top: 100px;
 }
 
